# secure_ipc_zmq

./: CMakeLists.txt  Readme.md  proc1.c  proc2.c  secure_proc1.c  secure_proc2.c  zmq_basic.c  zmq_basic.h
